# HydraStream

./: .coverage  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: benchmark.yml  chaos.yml  python-bench.yml  tests.yml
src/: main.py
src/hydrastream/: __init__.py  dispatcher.py  engine.py  exceptions.py  facade.py  interfaces.py  loader.py  main.py  models.py  monitor.py  network.py  producer.py  providers.py  storage.py
src/hydrastream/actors/: analyzer.py  controller.py  dispatcher.py  memory_throttler.py  worker.py
src/ncbiloader/: loader.py  models.py  monitor.py  network.py  providers.py  storage.py
src/test/: test_loader.py
test/: test_loader.py  test_models.py  test_path.py  test_providers.py  test_storage.py
tests/: test_e2e.py
