[project]
name = "hydrastream"
version = "1.0"
license = {text = "MIT"}
description = "A high-performance, fault-tolerant, and streaming-capable async downloader."
authors =[
    { name = "Valentin Zhukovetski", email = "zukovetski@gmail.com" }
]
keywords =["async", "streaming", "download", "bioinformatics", "resilience", "uvloop", "httpx"]
classifiers =[
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: System :: Networking",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
readme = "README.md"
requires-python = ">=3.11"
dependencies =[
    "aiolimiter>=1.2.1",
    "httpx[http2]>=0.28.1",
    "orjson>=3.11.7",
    "rich>=14.3.2",
    "typer>=0.24.1",
    "uvloop>=0.22.1 ; sys_platform != 'win32'",
]

[build-system]
requires =["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev =[
    "icecream>=2.1.10",
    "pip-licenses>=5.5.1",
    "pre-commit>=4.5.1",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "respx>=0.22.0",
    "ruff>=0.15.1",
]

[project.scripts]
hydrastream = "hydrastream.main:app"
hstream = "hydrastream.main:app"
hs = "hydrastream.main:app"

[tool.setuptools.dynamic]
version = {attr = "hydrastream.__init__.__version__"}

[tool.uv]
package = true

[tool.setuptools.packages.find]
where =["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.uv.sources]
hydrastream = { workspace = true }

[tool.ruff]
# Specify the source directory for correct import sorting
src = ["src"]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select =[
    "E", "W",  # pycodestyle
    "F",       # pyflakes
    "I",       # isort
    "UP",      # pyupgrade
    "B",       # bugbear
    "SIM",     # simplify
    "C901",    # complex-structure
    "ANN",     # annotations
    "PTH",     # use-pathlib
    "RET",     # return-statements
    "RUF",     # ruff-specific
    "N",       # pep8-naming
]
fixable =["ALL"]

ignore =[
    "RUF001", # Allow Cyrillic letters in strings
    "RUF002", # Allow Cyrillic letters in docstrings
    "RUF003", # Allow Cyrillic letters in comments
    "C901",   # Ignore complexity warnings for now
    "W293",   # Blank line contains whitespace
]

[tool.ruff.format]
# Use double quotes (Black standard)
quote-style = "double"

# Use spaces instead of tabs
indent-style = "space"

# Automatically detect line endings (LF or CRLF)
line-ending = "auto"

# Automatically format code blocks inside docstrings
docstring-code-format = true

# Do not skip formatting of magic trailing commas
skip-magic-trailing-comma = false

# Enable experimental formatting improvements
preview = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["ANN"]

[tool.pyright]
include = ["src"]
ignore = ["test"]
venvPath = "."
venv = ".venv"
typeCheckingMode = "strict"

executionEnvironments =[
    { root = "src/test", reportPrivateUsage = "none" },
    { root = "src" }
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
